# cv-reporter

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  pyproject.toml
src/cv_reporter/: config.py  main.py
src/cv_reporter/db/: models.py  queries.py
src/cv_reporter/report/: generator.py
src/cv_reporter/telegram/: sender.py
systemd/: cv-reporter.service  cv-reporter.timer
